# contrachecker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-04-chainofmeaning-autopsy.md  2026-04-04-engine-v2-prolog-style.md  2026-04-04-engine-v3-auto-taxonomy.md  2026-04-07-rag-contradiction-layer.md
docs/superpowers/specs/: 2026-04-04-chainofmeaning-autopsy-design.md
examples/: langchain_rag.py  medical_docs.py  quickstart.py
expected/: scenarios.py
legacy/: chainofmeaning-claude-code-prompt.md  chat.py  decision_tree.py  engine_v3.py  linkedin-post.md
legacy/reports/: autopsy-v2-report.txt  million-test-cluster-aware-report.txt  million-test-decision-tree-report.txt  scale-test-v3-optimized-report.txt
legacy/tests/: autopsy_v2.py  autopsy_v3.py  growth_test.py  million_test.py  scale_test.py
legacy/tools/: generate_knowledge.py
reports/: autopsy-report.txt  autopsy-v3-report.txt  growth-test-report.txt  scale-test-report.txt
src/: engine.py  engine_v2.py  engine_v3.py  engine_v4.py  storage.py  taxonomy.py
src/contrachecker/: __init__.py  detector.py  models.py
src/contrachecker/extractors/: __init__.py  base.py  llm_extractor.py  pattern_extractor.py
src/contrachecker/integrations/: __init__.py  langchain.py
tests/: autopsy.py  conftest.py  million_test.py  query_test.py  test_detector.py  test_end_to_end.py  test_langchain_integration.py  test_llm_extractor.py  test_models.py  test_pattern_extractor.py
tools/: generate_knowledge.py
