[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contrachecker"
version = "0.1.0"
description = "Detect contradictions between retrieved documents in RAG pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Baris Genc", email = "info@gencbaris.com" },
]
keywords = ["rag", "contradiction", "detection", "llm", "nlp", "fact-checking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
langchain = ["langchain-core>=0.2"]
all = ["openai>=1.0", "langchain-core>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://gencbaris.com"
Repository = "https://github.com/barisgenc/contrachecker"
Issues = "https://github.com/barisgenc/contrachecker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contrachecker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
